--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -1,70 +1,47 @@
-name: Main
-
-on:
-  push:
-    branches:
-      - master
-  pull_request:
+name: Go Matrix
+on: [push, pull_request]
 
 jobs:
 
-  main:
-    name: Main Process
-    runs-on: ubuntu-latest
+  cross:
+    name: Go
+    runs-on: ${{ matrix.os }}
     env:
-      GO_VERSION: 1.19
-      GOLANGCI_LINT_VERSION: v1.50.0
-      YAEGI_VERSION: v0.14.2
       CGO_ENABLED: 0
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}/go/src/github.com/${{ github.repository }}
+
+    strategy:
+      matrix:
+        go-version: [ 1.19, 1.x ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-
       # https://github.com/marketplace/actions/setup-go-environment
-      - name: Set up Go ${{ env.GO_VERSION }}
+      - name: Set up Go ${{ matrix.go-version }}
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ matrix.go-version }}
 
       # https://github.com/marketplace/actions/checkout
-      - name: Check out code
+      - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          path: go/src/github.com/${{ github.repository }}
-          fetch-depth: 0
 
       # https://github.com/marketplace/actions/cache
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
-          path: ${{ github.workspace }}/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          # In order:
+          # * Module download cache
+          # * Build cache (Linux)
+          # * Build cache (Mac)
+          # * Build cache (Windows)
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/Library/Caches/go-build
+            %LocalAppData%\go-build
+          key: ${{ runner.os }}-${{ matrix.go-version }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-
+            ${{ runner.os }}-${{ matrix.go-version }}-go-
 
-      # https://golangci-lint.run/usage/install#other-ci
-      - name: Install golangci-lint ${{ env.GOLANGCI_LINT_VERSION }}
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
-
-      - name: Install Yaegi ${{ env.YAEGI_VERSION }}
-        run: curl -sfL https://raw.githubusercontent.com/traefik/yaegi/master/install.sh | bash -s -- -b $(go env GOPATH)/bin ${YAEGI_VERSION}
-
-      - name: Setup GOPATH
-        run: go env -w GOPATH=${{ github.workspace }}/go
-
-      - name: Check and get dependencies
-        run: |
-          go mod tidy
-          git diff --exit-code go.mod
-          go mod download
-          go mod vendor
-
-      - name: Lint and Tests
-        run: make
-
-      - name: Run tests with Yaegi
-        run: make yaegi_test
-        env:
-          GOPATH: ${{ github.workspace }}/go
+      - name: Test
+        run: go test -v -cover ./...
